--- a/about.html
+++ b/about.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap" rel="stylesheet" />
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" rel="stylesheet" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oxygen&family=Oxygen+Mono&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="css/styles.css" />
     <title>Jen Kramer Portfolio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav>
-        <ul>
-            <li>
-                <h1>
-                    <a href="index.html"><span class="fas fa-code" aria-hidden="true"></span> Jen
+      <ul>
+        <li>
+          <h1>
+            <a href="index.html"
+              ><span class="fas fa-code" aria-hidden="true"></span> Jen
               Kramer</a
             >
           </h1>
         </li>
         <li><a href="index.html#projects">Projects</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="index.html#contact">Contact</a></li>
-            <li>
-                <a href="https://www.linkedin.com/in/jen4web/" target="_blank">
-                    <span class="fab fa-linkedin" aria-hidden="true"></span>
-                    <span class="sr-only">LinkedIn</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.github.com/jen4web" target="_blank">
-                    <span class="fab fa-github-square" aria-hidden="true"></span>
-                    <span class="sr-only">Github</span>
-                </a>
-            </li>
-            <li>
-                <a href="https://www.dropbox.com/s/3z2hm5gu3v2lrfy/JenKramerCV.pdf?dl=0" target="_blank" class="button">Resume</a
+        <li><a href="about.html">About</a></li>
+        <li><a href="index.html#contact">Contact</a></li>
+        <li>
+          <a href="https://www.linkedin.com/in/jen4web/" target="_blank">
+            <span class="fab fa-linkedin" aria-hidden="true"></span>
+            <span class="sr-only">LinkedIn</span>
+          </a>
+        </li>
+        <li>
+          <a href="https://www.github.com/jen4web" target="_blank">
+            <span class="fab fa-github-square" aria-hidden="true"></span>
+            <span class="sr-only">Github</span>
+          </a>
+        </li>
+        <li>
+          <a
+            href="https://www.dropbox.com/s/3z2hm5gu3v2lrfy/JenKramerCV.pdf?dl=0"
+            target="_blank"
+            class="button"
+            >Resume</a
           >
         </li>
       </ul>
@@ -60,44 +70,47 @@
               <a href="https://frontendmasters.github.io/grid-flexbox-v2/"
                 >this</a
               >, and multiple links look <a href="#">like this</a> and
-                <a href="#">like this</a>.
-                </p>
-                <h4>My favorite technologies include:</h4>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>UX</li>
-                </ul>
-                </div>
-                <img src="https://raw.githubusercontent.com/jen4web/fem-getting-started-with-css/main/ch-7-end/img/pexels-christina-morillo-1181267.jpg" alt="Christina Morillo at Pexels." />
-                </article>
-                </section>
-                </div>
-                <div class="gradient"></div>
-                <footer>
-                    <h2>Jen Kramer &middot; Educator</h2>
-                    <ul>
-                        <li>
-                            <a href="https://www.linkedin.com/in/jen4web" target="_blank">
-                                <span class="fab fa-linkedin" aria-hidden="true"></span>
-                                <span class="sr-only">LinkedIn</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="https://www.github.com/jen4web" target="_blank">
-                                <span class="fab fa-github-square" aria-hidden="true"></span>
-                                <span class="sr-only">Github</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="mailto:jen@example.com">
-                                <span class="fas fa-envelope" aria-hidden="true"></span>
-                                <span class="sr-only">Email</span>
-                            </a>
-                        </li>
-                    </ul>
-                    <p><small>&copy; 2021 Jen Kramer. All rights reserved.</small></p>
-                </footer>
-</body>
-
+              <a href="#">like this</a>.
+            </p>
+            <h4>My favorite technologies include:</h4>
+            <ul>
+              <li>HTML</li>
+              <li>CSS</li>
+              <li>UX</li>
+            </ul>
+          </div>
+          <img
+            src="https://raw.githubusercontent.com/jen4web/fem-getting-started-with-css/main/ch-7-end/img/pexels-christina-morillo-1181267.jpg"
+            alt="Christina Morillo at Pexels."
+          />
+        </article>
+      </section>
+    </div>
+    <div class="gradient"></div>
+    <footer>
+        <p>
+          Harlley Bastos &middot; Software Engineer Developer
+        </p>
+        <ul>
+          <li>
+            <a href="https://www.linkedin.com/in/harlley-bastos/" target="_blank"
+              ><span aria-hidden="true" class="fab fa-linkedin"></span
+              ><span class="sr-only">LinkedIn</span></a
+            >
+          </li>
+          <li>
+            <a href="https://github.com/harlleybastos" target="_blank">
+              <span aria-hidden="true" class="fab fa-github-square"></span>
+              <span class="sr-only">GitHub</span></a
+            >
+          </li>
+          <li>
+            <a href="mailto:harlleybastos@hotmail.com">
+              <span aria-hidden="true" class="fa-solid fa-envelope"></span>
+              <span class="sr-only">Mail</span></a
+            >
+        </ul>
+        <p><small>&copy; 2022 Harlley Bastos. All rights reserved.</small></p>
+      </fotter>
+  </body>
 </html>
